8.3.3/components/text.mdx
---
description: Компонент для отображения основного наборного текста интерфейса. Используется для большинства текстовых элементов - описаний, подписей ячеек, контента карточек и т. д.
tags: body
---

<Overview group="typography" forcedPath="components/Typography/Text/Text.tsx">

# Text [tag:component]

Компонент для отображения основного наборного текста интерфейса.
Используется для большинства текстовых элементов: описаний, подписей ячеек, контента карточек и т. д.

</Overview>

{/* @example-description: Базовое использование компонента `Text`. */}
<Playground>
  ```jsx
  <Text>Основной текст интерфейса</Text>
  ```
</Playground>

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `align` | `"start" \| "center" \| "end"` | `-` | Выравнивание текста. Не имеет эффекта при inline={true}. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `span` |  |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `inline` | `boolean` | `false` | Делает блок инлайновым. |
| `normalize` | `boolean` | `true` | Убирает внешние отступы. |
| `useAccentWeight` | `boolean` | `-` | Включает акцентный тип начертания шрифта. Используются токены fontWeightAccent[1, 2, 3] Используется только вместе с `weight`. |
| `weight` | `"1" \| "2" \| "3"` | `-` | Задаёт начертание шрифта, отличное от стандартного. |

